# zhihu-cli

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml
docs/: development.md
docs/superpowers/plans/: 2026-06-26-zhihu-cli-implementation.md  2026-06-29-zhihu-hot-list.md
docs/superpowers/specs/: 2026-06-26-zhihu-cli-design.md  2026-06-29-zhihu-hot-list-design.md
scripts/: build-npm-packages.sh  coverage.sh
skill/zhihu-cli-cli/: SKILL.md
skills/zhihu-cli/: SKILL.md
skills/zhihu-cli/evals/: evals.json
skills/zhihu-cli/references/: api-reference.md
src/: cli.rs  client.rs  config.rs  error.rs  main.rs  output.rs
src/commands/: ask.rs  auth.rs  hot.rs  mod.rs  search.rs
tests/: cli.rs  integration.rs  mocked_api.rs
