[package]
name = "zhihu-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "zhihu"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "5"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
