[package]
name = "zhihu-cli"
version = "0.1.0"
edition = "2024"
authors = ["dawnswwwww"]
description = "CLI for the Zhihu Open Platform API"
license = "MIT"
repository = "https://github.com/dawnswwwww/zhihu-cli"
homepage = "https://github.com/dawnswwwww/zhihu-cli"
keywords = ["zhihu", "cli", "api", "search", "ai"]
categories = ["command-line-utilities"]
rust-version = "1.96.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[[bin]]
name = "zhihu"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "5"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test = "3"
tempfile = "3"
wiremock = "0.6"
